Salesforce/force-app/main/default/objects/HWI_Document_Event_Rule__mdt/HWI_Document_Event_Rule__mdt.object-meta.xml
<CustomObject>
    <description>The different document packs to use for the different types of policy processes</description>
    <label>HWI Document Event Rule</label>
    <pluralLabel>HWI Document Event Rules</pluralLabel>
</CustomObject>