Salesforce/force-app/main/default/objects/HWI_Document_Event_Rule__mdt/fields/Document_Pack__c.field-meta.xml
<CustomField>
    <fullName>Document_Pack__c</fullName>
    <label>Document Pack</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>