Salesforce/force-app/main/default/objects/HWI_Document_Event_Rule__mdt/fields/Old_Legislation__c.field-meta.xml
<CustomField>
    <fullName>Old_Legislation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Legislation</label>
    <type>Checkbox</type>
</CustomField>