Salesforce/force-app/main/default/objects/HWI_Document_Event_Rule__mdt/fields/Policy_Process__c.field-meta.xml
<CustomField>
    <fullName>Policy_Process__c</fullName>
    <label>Policy Process</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>