Salesforce/force-app/main/default/objects/HWI_Document_Event_Rule__mdt/fields/Speculative_Construction__c.field-meta.xml
<CustomField>
    <fullName>Speculative_Construction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Speculative Construction</label>
    <type>Checkbox</type>
</CustomField>