Salesforce/force-app/main/default/objects/HWI_Document_Event_Rule__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Policy_Process__c</columns>
    <columns>Document_Pack__c</columns>
    <columns>Old_Legislation__c</columns>
    <columns>Speculative_Construction__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>